# 2d-computer-graphics

./: .clang-format  .clang_format  CMakeLists.txt  main  main.cxx  random.ppm
core/: CMakeLists.txt
core/src/: core.cxx  core.h  core_draw.cxx  core_draw.h  core_file.cxx  core_file.h  core_log.cxx  core_log.h  core_manipulation.cxx  core_manipulation.h  core_utils.cxx  core_utils.h
src/: CMakeLists.txt  draw.cxx  draw.h  file_manager.cxx  file_manager.h  image_manipulation.cxx  image_manipulation.h  logging.cxx  logging.h  main.cxx  stream.cxx  stream.h  structs.h  utils.cxx  utils.h
vendors/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
vendors/sdl3/: CMakeLists.txt
vendors/sdl_image/: CMakeLists.txt
